<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_reserve"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/reserve" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/photo_gallery" />
        <item
            android:id="@+id/nav_staff"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/staff" />
        <item
            android:id="@+id/nav_coupon"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/coupon" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/setting" />
    </group>

</menu>
