<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/pager_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/share_title"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/code_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/share_top"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_hash_tag"
            android:orientation="horizontal"
            android:padding="0dp">

            <TextView
                android:id="@+id/hash_tag_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="#hashtag" />


            <Button
                android:id="@+id/copy_hash_tag_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_ex"
                android:text="@string/copy_one"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.facebook.share.widget.ShareButton
                android:id="@+id/fb_share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/facebook_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_facebook" />

            <ImageButton
                android:id="@+id/twitter_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/icon_twitter" />

            <ImageButton
                android:id="@+id/instagram_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_instagram" />
        </LinearLayout>

        <Button
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/skip"
            android:textColor="@color/button_text_color" />
    </LinearLayout>


</RelativeLayout>