<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                app:layout_aspectRatio="186%"
                app:layout_widthPercent="100%" />

        </android.support.percent.PercentRelativeLayout>

        <LinearLayout
            android:id="@+id/view_pager_dots_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/coupon_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/restaurant_ic_coupon" />

            <TextView
                android:id="@+id/coupon_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coupon"
                android:textColor="@color/green_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/chat_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/restaurant_ic_chat" />

            <TextView
                android:id="@+id/chat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat"
                android:textColor="@color/green_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/phone_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/restaurant_ic_phone" />

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/green_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/direction_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/restaurant_ic_direction" />

            <TextView
                android:id="@+id/direction_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction"
                android:textColor="@color/green_dark" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
