<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8FA"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/mask_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:stateListAnimator="@null" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorNavBackground"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            android:subtitleTextColor="@color/colorNavSubTextColor"
            android:textAlignment="center"
            android:titleTextColor="@color/colorNavTextColor"
            android:visibility="visible"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize">

                    <ImageButton
                        android:id="@+id/left_toolbar_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:visibility="visible" />

                </RelativeLayout>

                <FrameLayout
                    android:id="@+id/nav_center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/title_toolbar_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/change_device_title"
                        android:textAppearance="@style/TextAppearance_Medium"
                        android:textColor="@android:color/black"
                        android:visibility="visible" />

                </FrameLayout>

                <RelativeLayout
                    android:id="@+id/right_toolbar_layout"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:visibility="invisible">

                    <ImageButton
                        android:id="@+id/right_toolbar_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent" />
                </RelativeLayout>

            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <View
        android:id="@+id/top_separate"
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:layout_below="@id/app_bar"
        android:background="@color/colorSeparate" />

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_separate"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/change_device_label_1"
            android:textColor="@color/title_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_hash_tag"
            android:orientation="horizontal"
            android:padding="0dp">

            <TextView
                android:id="@+id/hash_tag_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="#hashtag"
                android:textColor="@color/title_text_color" />


            <Button
                android:id="@+id/copy_hash_tag_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_ex"
                android:text="@string/copy_one"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/change_device_label_2"
            android:textColor="@color/title_text_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_inactive"
            android:text="@string/change_device_button_left"
            android:textColor="@color/title_text_color" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_active"
            android:text="@string/change_device_button_right"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>