<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/pager_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/item_margin"
            android:background="@drawable/restaurant_share_icon" />

        <TextView
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/share_title"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/hash_tag_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="mathew02"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/green_dark" />

        <TextView
            android:id="@+id/code_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/share_info"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.facebook.share.widget.ShareButton
                android:id="@+id/fb_share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/facebook_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_share_facebook" />

            <ImageButton
                android:id="@+id/twitter_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"

                android:background="@drawable/ic_share_twitter" />

            <ImageButton
                android:id="@+id/instagram_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/ic_share_instagram" />
            <ImageButton
                android:id="@+id/email_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/restaurant_ic_link_email" />
        </LinearLayout>

        <Button
            android:id="@+id/close_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:background="@drawable/restaurant_bg_link_button"
            android:text="@string/ok"
            android:textColor="@color/button_text_color" />
    </LinearLayout>


</RelativeLayout>